[gd_scene load_steps=2 format=3 uid="uid://da4i62n3hjuxr"]

[ext_resource type="Script" uid="uid://wbd1rm62e7i1" path="res://guns/base_gun.gd" id="1_1w2wh"]

[node name="BaseGun" type="Node2D"]
script = ExtResource("1_1w2wh")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
